# legal-council

./: .gitignore  Makefile  README.md  integration.md
api/: .env.example  Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schema.sql  schemas.py
api/agents/: __init__.py  base.py  historian.py  humanist.py  orchestrator.py  strict.py
api/routers/: __init__.py  cases.py  deliberation.py  sessions.py
api/services/: __init__.py  case_parser.py  embeddings.py  opinion_generator.py
extraction-job/: .env.example  .gitignore  Dockerfile  database.py  embeddings.py  job.py  main.py  pdf_extraction.py  pyproject.toml  requirements.txt  schema.sql  settings.py  utils.py
legal-council-fe/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
legal-council-fe/src/: types.ts
legal-council-fe/src/app/: globals.css  layout.tsx  page.tsx
legal-council-fe/src/app/deliberation/: page.tsx
legal-council-fe/src/app/opinion/: page.tsx
legal-council-fe/src/components/: agent-avatar.tsx  app-layout.tsx  case-input-form.tsx  council-debate.tsx  header.tsx  legal-council-app.tsx  legal-opinion.tsx  message-bubble.tsx  step-progress.tsx
legal-council-fe/src/context/: legal-council-context.tsx
legal-council-fe/src/hooks/: useDeliberation.ts  useSession.ts
legal-council-fe/src/lib/: config.ts  mappers.ts
legal-council-fe/src/services/: api.ts
legal-council-fe/src/types/: api.ts  legal-council.ts
